# canable2-fw

./: .project  CMakeLists.txt  README.md
Release/: original.hex
src/: slcan.c  usbd_cdc_if.c
